syntax="proto3";
package qlik;
message ConnectionInfo
{
    string connectionString = 1;
    string user = 2;
    string password = 3;
}
message GenericCommand
{
    string command = 1;
    string method = 2;
    repeated string parameters = 3;
    ConnectionInfo connection = 4;
}
message GenericCommandResponse
{
    string data = 1;
}
message SessionInfo
{
    string user = 1;
    string sessionId = 2;
    string docId = 3;
}
message DataInfo
{
    string statement = 1;
    string statementParameters = 2;
}
message GetDataOptions
{
    ConnectionInfo connection = 1;
    SessionInfo sessionInfo = 2;
    DataInfo parameters = 3;
}
message Dual {
    double numData = 1; /// Numeric value as double.
    string strData = 2; /// String.
    bool strIsNull = 3; /// String is absent rather than empty.
}
message Row {
    repeated Dual duals = 1; /// Row of duals.
}
message Column {
    repeated string strings = 1;
    repeated double numbers = 2;
    repeated bool strIsNulls = 3;
}
message BundledRows {
    repeated Row rows = 1;
    repeated Column cols = 2;
}
enum FieldType {
    UNKNOWN = 0;
    ASCII = 1;
    REAL = 2;
    DATE = 3;
    TIME = 4;
    TIMESTAMP = 5;
    INTERVAL = 6;
    INTEGER = 7;
    FIX = 8;
    MONEY = 9;
}
message FieldInfo {
    string name = 1;
    FieldType type = 2;
}
message GetDataResponse {
    repeated FieldInfo fieldInfo = 1;
    string tableName = 2;
}
service Connector
{
    rpc ExecuteGenericCommand (GenericCommand) returns (GenericCommandResponse) {}
    rpc GetData (GetDataOptions) returns (stream BundledRows) {}
}